# libtc-ipc-ctrl

./: Makefile.am  configure.ac
include/: tc-buffer.h  tc-crc.h  tc-ipc-ctrl-log.h  tc-ipc-ctrl.h  tc-ipc-dev.h  tc-ipc-protocol.h  tc-package.h  tc-parser-thread.h  tc-parser.h  tc-read-thread.h  tc-rw-control.h  tc-write-thread.h
src/: tc-ipc-ctrl.c
src/ipc-dev/: tc-ipc-dev.c
src/ipc-parser/: tc-crc.c  tc-package.c  tc-parser-thread.c  tc-parser.c
src/ipc-rw-control/: tc-buffer.c  tc-read-thread.c  tc-rw-control.c  tc-write-thread.c
